Fix pile tags collapsing into subject column
Remove tags from their own pile column and float them in sender column
instead. That gives a behavior quite comparable to the previous dynamic-sized
column layout that adapts nicely for most cases.

--- a/shared-data/default-theme/less/app/mobile.less
+++ b/shared-data/default-theme/less/app/mobile.less
@@ -222,8 +222,8 @@
   }
 
   #pile-results td.checkbox,
-  #pile-results td.crypto-and-tags { display: none; }
-  #pile-results td.from,
+  #pile-results div.crypto-and-tags { display: none; }
+  #pile-results td.rom,
   #pile-results td.date { padding-right: 3px; }
 
 /*  #pile-results td.subject a.item-subject { width: 370px; }*/
@@ -302,7 +302,7 @@
         margin: 5px 5px 5px 0px;
         width: 40px; height: 40px; }
     }
-    td.crypto-and-tags { display: none; }
+    div.crypto-and-tags { display: none; }
     td.checkbox { display: none; }
     td.date { position: absolute; top: 0px; right: 5px; pull: right; }
     td.from {
